Change tablelayout bug

--- a/pinet/widgets/tablelayout/scss/pinet_tablelayout.scss
+++ b/pinet/widgets/tablelayout/scss/pinet_tablelayout.scss
@@ -21,7 +21,11 @@
 		#messagebar {
 			font-size: 14px;
 		}
+		#toolbar {
+			font-size: 14px;
+		}
 		#scrollcontent {
+			font-size: 14px;
 			> .table-col {
 				position: relative;
 				// overflow: auto;
